opam-version: "2.0"
version: "1.2.0"
synopsis: "Render boxes in the terminal"
description: """
Render boxes in the terminal, can configure the padding, margin and the border of the box.
"""
maintainer: ["davesnx <dsnxmoreno@gmail.com>"]
authors: ["davesnx <dsnxmoreno@gmail.com>"]
license: "MIT"
homepage: "https://github.com/davesnx/ocaml-box"
doc: "https://davesnx.github.io/ocaml-box/box/index.html"
bug-reports: "https://github.com/davesnx/ocaml-box/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.7"}
  "odoc" {with-doc}
  "reason" {build}
]
dev-repo: "git+https://github.com/davesnx/ocaml-box.git"
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
