(library
 (name ocaml_box_test)
 (libraries rely.lib ocaml_box)
 (modules
  (:standard \ test_runner)
 )
 (flags
  (:standard -linkall -g -open StdLabels -open Ocaml_box -w +A-48-42-40-5))
)

(executable
 (name test_runner)
 (libraries rely.lib ocaml_box_test)
 (modules test_runner)
 (flags (:standard -open StdLabels -w +A-48-42-40))
)

(rule
 (alias runtest)
 (action
  (run ./test_runner.exe -q --color=always)
 )
)

(include_subdirs unqualified)
